fix(sponsors): keep past sponsor logos in two columns on small screens Use a 2-column responsive grid at <= 60rem with tighter gaps Tune logo spacing/sizing with clamp() for better fit on small screens Align odd/even items to keep the grid visually balanced Prevent logo distortion by using max-width: 100% and height: auto

--- a/sass/components/_past-sponsors.scss
+++ b/sass/components/_past-sponsors.scss
@@ -122,20 +122,31 @@
       z-index: 3;
 
       @media screen and (max-width: 60rem) {
-        grid-template-columns: 30% 30%;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        column-gap: 1.5rem;
+        row-gap: 1.5rem;
       }
 
-      @media screen and (max-width: 32rem) {
-        grid-template-columns: 1fr;
-      }
+      /* @media screen and (max-width: 32rem) {
+        grid-template-columns: repeat(2, 1fr);
+      } */
 
       a {
         @include sponsor-logo;
 
         @media screen and (max-width: 60rem) {
-          border: 1rem solid transparent;
-          padding: 0.25rem;
-          height: clamp(2.25rem, 8vw, 3.5rem);
+          min-width: 0;
+          border: clamp(0.5rem, 2vw, 1rem) solid transparent;
+          padding: clamp(0.125rem, 0.5vw, 0.25rem);
+          height: clamp(1.5rem, 7vw, 3.5rem);
+
+          &:nth-child(odd) {
+            justify-self: right;
+          }
+
+          &:nth-child(even) {
+            justify-self: left;
+          }
         }
 
         &:last-child:nth-child(3n + 1) {
@@ -144,6 +155,7 @@
 
           @media screen and (max-width: 60rem) {
             grid-column: revert;
+            justify-self: left;
           }
         }
       }
@@ -162,7 +174,8 @@
 
       img {
         max-height: 4rem;
-        height: unset;
+        max-width: 100%;
+        height: auto;
         width: auto;
 
         @media screen and (max-width: 60rem) {
